// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic list should render basic single element correctly 1`] = `
<ul>
  <li
    id="1"
  >
    first
  </li>
</ul>
`;

exports[`basic list should render basic two elements correctly 1`] = `
<ul>
  <li
    id="1"
  >
    first
  </li>
  <li
    id="2"
  >
    second
  </li>
</ul>
`;
